# raygon2

./: .gitmodules  Cargo.toml  Makefile.toml  README.md  katex-header.html
.cargo/: config.toml
crates/raygon-core/: Cargo.toml
crates/raygon-core/src/: lib.rs  macros.rs  slice.rs
crates/raygon-core/tests/: lower_bound.rs
crates/raygon-geometry/: Cargo.toml
crates/raygon-geometry/src/: lib.rs  matrix4.rs  point3.rs  quaternion.rs  ray3.rs  tangent.rs  transform3.rs  vector3.rs
crates/raygon-geometry/src/scalar/: vector3.rs
crates/raygon-geometry/src/soa/: matrix4.rs  mod.rs  quaternion.rs  tangent.rs  transform3.rs  vector3.rs
crates/raygon-math/: Cargo.toml  Makefile.toml
crates/raygon-math/src/: lib.rs
crates/raygon-math/src/scalar/: mod.rs
crates/raygon-math/src/soa/: cf.rs
crates/raygon-profiler/: Cargo.toml
crates/raygon-profiler/src/: counter.rs  lib.rs  profiler.rs
crates/raygon-sampling/: Cargo.toml
crates/raygon-shader/: Cargo.toml
crates/raygon-shader/examples/: asm.rs
crates/raygon-shader/src/: lib.rs
crates/raygon-shader/src/old/jit/: builtin.rs  mod.rs  state.rs
crates/raygon-shader/src/old/jit/ir/: mod.rs
crates/raygon-shader/src/old/vm/: mod.rs  stack.rs
crates/raygon-shader/src/old/vm/instr/: binary.rs  compare.rs  mod.rs
crates/raygon-shader/src/old/vm/rom/: mod.rs
crates/raygon-shader/src/vm/: mod.rs
crates/raygon-shader/src/vm/instr/: binary.rs  mod.rs  unary.rs
crates/raygon-shader/src/vm/rom/: curve.rs
