[workspace]
members = ["crates/*", "deps/*"]

[profile.dev]
debug = true
opt-level = 2
lto = 'thin'
incremental = false
debug-assertions = true
panic = 'abort'
# overflow-checks = false

[profile.release]
opt-level = 3
debug = false
lto = 'fat'
incremental = false
debug-assertions = false
codegen-units = 1
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
lto = 'fat'
debug-assertions = false
incremental = false
codegen-units = 1
