[package]
name = "raygon-geometry"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raygon-math = { path = "../raygon-math" }

thermite = { git = "https://github.com/raygon-renderer/thermite" }