[package]
name = "raygon-profiler"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raygon-core = { path = "../raygon-core" }

clocksource = { path = "../../deps/clocksource" }
deepsize =    { path = "../../deps/deepsize" }

cache-padded = "1.1.1"