[package]
name = "raygon-shader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raygon-core = { path = "../raygon-core" }

thermite = { git = "https://github.com/raygon-renderer/thermite" }

deepsize = { path = "../../deps/deepsize" }