[package]
name = "raygon-shader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raygon-core = { path = "../raygon-core" }

deepsize = { path = "../../deps/deepsize" }

thermite = { git = "https://github.com/raygon-renderer/thermite" }

[dependencies.inkwell]
path = "../../deps/inkwell"
# git = "https://github.com/TheDan64/inkwell"
# branch = "master"
default_features = false
features = ["target-x86", "llvm12-0"]